--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knex": "^0.16.3",
     "node-sass": "^4.11.0",
     "objection": "^1.4.0",
+    "objection-softdelete": "^2.0.1",
     "pg": "^7.8.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
