--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "knex": "^0.16.3",
+    "markdown-it": "^8.4.2",
     "node-sass": "^4.11.0",
     "objection": "^1.4.0",
     "objection-softdelete": "^2.0.1",
