--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "store2": "^2.7.1",
+    "terser": "3.14.0",
     "uuid": "^3.3.2",
     "yup": "^0.26.7"
   },
